--- a/conf.d/market-user.conf
+++ b/conf.d/market-user.conf
@@ -1,11 +1,9 @@
 upstream market_user_backend {
-    server market-user-web-1:8000;
-    server market-user-web-2:8000;
+    server web:8000;
 }
 
 server {
     listen 80;
-
     server_name market-user.open-gpt.ru;
 
     location / {
