--- a/conf.d/market-user.conf
+++ b/conf.d/market-user.conf
@@ -1,13 +1,14 @@
-upstream market_user_backend {
-    server web:8000;
-}
-
 server {
     listen 80;
+
     server_name market-user.open-gpt.ru;
 
     location / {
-        proxy_pass http://market_user_backend;
+
+        resolver 127.0.0.11 valid=10s;
+
+        set $backend "web:8000";
+        proxy_pass http://$backend;
 
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
