--- a/conf.d/market-user.conf
+++ b/conf.d/market-user.conf
@@ -7,9 +7,8 @@ server {
 
         resolver 127.0.0.11 valid=10s;
 
-        set $backend "web-blue:8000";
+        set $backend "web:8000";
         proxy_pass http://$backend;
-
 
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
