--- a/conf.d/market-product.conf
+++ b/conf.d/market-product.conf
@@ -7,7 +7,7 @@ server {
 
         resolver 127.0.0.11 valid=1s;
 
-        set $backend "web:8001";
+        set $backend "web-product:8000";
         proxy_pass http://$backend;
 
         proxy_http_version 1.1;
