--- a/conf.d/market-pricing-engine.conf
+++ b/conf.d/market-pricing-engine.conf
@@ -1,13 +1,13 @@
 server {
     listen 80;
 
-    server_name product-engine.open-gpt.ru;
+    server_name pricing-engine.open-gpt.ru;
 
     location / {
 
         resolver 127.0.0.11 valid=1s;
 
-        set $backend "web-product-engine:8000";
+        set $backend "web-pricing-engine:8000";
         proxy_pass http://$backend;
 
         proxy_http_version 1.1;
