--- a/conf.d/market-pricing-engine.conf
+++ b/conf.d/market-pricing-engine.conf
@@ -1,7 +1,7 @@
 server {
     listen 80;
 
-    server_name pricing-engine.open-gpt.ru;
+    server_name pricing-engine.demo-market.ru;
 
     location / {
 
